# subtitle-generator

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  example.srt  pyproject.toml
.github/workflows/: docker.yml
src/subtitle_generator/: __init__.py  cli_client.py  config.py  dependencies.py  main.py  models.py  queue.py
src/subtitle_generator/routers/: jobs.py
src/subtitle_generator/services/: audio.py  groq_asr.py  subtitle.py
src/subtitle_generator/utils/: logger.py
tests/: test_api.py  test_subtitle.py
