[project]
name = "subtitle-generator"
version = "0.1.0"
description = "Production-ready subtitle generation service using Groq Whisper API"
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "MIT" }
authors = [{ name = "Subtitle Generator Team" }]

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    "pydantic-settings>=2.0.0",
    "structlog>=24.0.0",
    "numpy>=1.26.0",
    "soundfile>=0.12.0",
    "python-ffmpeg>=2.0.0",
    "aiofiles>=23.0.0",
    "httpx>=0.27.0",
    "groq>=1.2.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6.0",
    "ty>=0.0.30",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
subtitle-generator = "subtitle_generator.main:main"
subgen = "subtitle_generator.cli_client:main"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # Pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "ASYNC",# flake8-async
]
ignore = ["D100", "D104", "D107", "D102", "B008", "ASYNC230", "SIM105", "ASYNC240"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.uv]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.ty.environment]
python-version = "3.12"
